--- a/prev_acoes.ipynb
+++ b/prev_acoes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPsVXRfSGkPm4ZMhGBL6Zr",
+      "authorship_tag": "ABX9TyN0zieZP+QxB2bs/nY25II0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,41 +132,35 @@
         "\n",
         "# carregar base de dados histórica das ações\n",
         "from pandas import read_csv\n",
-        "# caminho\n",
         "path = 'https://raw.githubusercontent.com/Gabe-Pasqual/time_series_forecasting/main/DataBase_Investing.csv'\n",
         "df = read_csv(path, header=0)\n",
-        "# summarizar\n",
         "print(df.shape)\n",
-        "# mostrar primeiras linhas para teste\n",
+        "\n",
+        "# teste tabela e gráfico\n",
         "print(df.head())\n",
-        "# carregar e plotar no gráfico\n",
         "from pandas import read_csv\n",
         "from matplotlib import pyplot\n",
-        "# carregar os dados para plotar\n",
         "path = 'https://raw.githubusercontent.com/Gabe-Pasqual/time_series_forecasting/main/DataBase_Investing.csv'\n",
         "df = read_csv(path, header=0)\n",
-        "# plotar o gráfico\n",
         "df.plot()\n",
         "pyplot.show()\n",
         "\n",
-        "\n",
-        "# make an in-sample forecast\n",
+        "# bibliotecas para o forecast\n",
         "from pandas import read_csv\n",
         "from pandas import to_datetime\n",
         "from pandas import DataFrame\n",
         "from fbprophet import Prophet\n",
         "from matplotlib import pyplot\n",
-        "# load data\n",
+        "\n",
+        "# carregando base histórica\n",
         "path = 'https://raw.githubusercontent.com/Gabe-Pasqual/time_series_forecasting/main/DataBase_Investing.csv'\n",
         "df = read_csv(path, header=0)\n",
-        "# prepare expected column names\n",
+        "\n",
+        "# propriedades do dataset\n",
         "df.columns = ['ds', 'y']\n",
         "df['ds']= to_datetime(df['ds'])\n",
-        "# define the model\n",
         "model = Prophet()\n",
-        "# fit the model\n",
         "model.fit(df)\n",
-        "# define the period for which we want a prediction\n",
         "future = list()\n",
         "for i in range(1, 13):\n",
         "\tdate = '2022-%02d' % i\n",
@@ -174,11 +168,11 @@
         "future = DataFrame(future)\n",
         "future.columns = ['ds']\n",
         "future['ds']= to_datetime(future['ds'])\n",
-        "# use the model to make a forecast\n",
+        "\n",
+        "# função de previsão usando o modelo de dados\n",
         "forecast = model.predict(future)\n",
-        "# summarize the forecast\n",
         "print(forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].head())\n",
-        "# plot forecast\n",
+        "# mostrar forecast no gráfico\n",
         "model.plot(forecast)\n",
         "pyplot.show()"
       ]
